--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   karaokeUrl: karaokeUrl$ | async,
   karaokeUser: karaokeUser$ | async
 } as obs$">
+<!-- <embed src="../assets/program.pdf" type="application/pdf" width="100%" height="600px" /> -->
   <ng-container *ngIf="(isAdmin || testUser || obs$?.config?.showVisible); else hiddenShowTemplate">
     <div class="rt-viewer" >
       <div [class.tv-wrapper]="!isAdmin" [class.admin-wrapper]="isAdmin">
@@ -50,7 +51,7 @@
         </div>
       </div>
     </div>
-  
+
     <ng-template #streamsTemplate>
        <div class="streams">
           <ng-container *ngIf="obs$?.karaokeUser?.vmixEmbed; else dolbyStreamTemplate">
@@ -133,9 +134,21 @@
     </ng-template>
   
     <div class="rt-chat" *ngIf="chatUrl">
+      <div class="pins" *ngIf="!isAdmin">
+        <a target="_blank" href="https://bit.ly/bqfkn-online-community-guidelines">
+          <span class="flower-icon">❀</span>
+          Community Guidelines
+        </a>
+        <a target="_blank" href="https://bit.ly/bqfkn-online-program">
+          <span class="flower-icon">✿</span>
+          Program
+        </a>
+      </div>
+    
       <iframe [attr.src]="chatUrl"></iframe>
     </div>
   </ng-container>
+
 </div>
 
 <ng-template #hiddenShowTemplate>
